fixed size for images on dashboard, may stretch, cards are same size, delete and edit btn not functional

--- a/application/client/src/styles/Dashboard.css
+++ b/application/client/src/styles/Dashboard.css
@@ -5,6 +5,8 @@ body{
     padding: 3%;
     margin-top: 3%;
     margin-bottom: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
     border-radius: 0.5rem;
     background: #fff;
 }
@@ -51,7 +53,6 @@ body{
 }
 .profile-info{
     padding: 5%;
-    margin-top: -15%;
 }
 .profile-info p{
     font-size: 12px;
@@ -88,9 +89,16 @@ body{
 
   .card {
       padding: 5px;
-      margin: 5px;
-      width: 18rem;
+      margin: 25px;
+      /* width: 18rem; */
   }
   .card-footer {
       background-color: none !important;
+  }
+
+  .img-thumbnail {
+      overflow: hidden;
+      background-size: cover;
+      width: 220px;
+      height: 220px;
   }
